Remove unneeded -XX:MaxPermSize=256m
Newer JDK remove this flag.